/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */
plugins {
	id 'buildlogic.java-conventions'
	id 'com.github.johnrengelman.shadow' version '8.1.1'
}

description = 'RuneLite Client'

java {
		sourceCompatibility = JavaVersion.VERSION_11
		targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
	implementation group: 'com.google.inject.extensions', name: 'guice-multibindings', version: '4.1.0', {
		exclude group: 'com.google.inject'
	}
	api libs.org.slf4j.slf4j.api
	api libs.ch.qos.logback.logback.classic
	api libs.net.sf.jopt.simple.jopt.simple
	api libs.com.google.guava.guava
	api libs.com.google.inject.guice
	api libs.com.google.code.gson.gson
	api libs.net.runelite.flatlaf
	api libs.org.apache.commons.commons.text
	api libs.net.runelite.archive.patcher.archive.patcher.applier
	api libs.net.java.dev.jna.jna
	api libs.net.java.dev.jna.jna.platform
	api libs.com.google.code.findbugs.jsr305
	api libs.com.google.protobuf.protobuf.javalite
	api libs.net.runelite.rlawt
	api libs.org.lwjgl.lwjgl
	api libs.org.lwjgl.lwjgl.opengl
	api libs.org.lwjgl.lwjgl.opencl
	api project(':runelite-api')
	api project(':jshell')
	api libs.net.runelite.arn.http.api
	api libs.net.runelite.discord
	api "org.json:json:20240303"
	runtimeOnly libs.org.lwjgl.lwjgl
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl) { classifier("natives-linux") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl) { classifier("natives-macos") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl) { classifier("natives-macos-arm64") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl) { classifier("natives-windows") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl) { classifier("natives-windows-x86") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl) { classifier("natives-windows-arm64") })
	runtimeOnly libs.org.lwjgl.lwjgl.opengl
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl.opengl) { classifier("natives-linux") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl.opengl) { classifier("natives-macos") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl.opengl) { classifier("natives-macos-arm64") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl.opengl) { classifier("natives-windows") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl.opengl) { classifier("natives-windows-x86") })
		runtimeOnly(variantOf(libs.org.lwjgl.lwjgl.opengl) { classifier("natives-windows-arm64") })
	testImplementation libs.junit.junit
	testImplementation libs.org.hamcrest.hamcrest.library
	testImplementation libs.org.mockito.mockito.core
	testImplementation libs.com.google.inject.myextensions.guice.testlib
	testImplementation libs.com.google.inject.myextensions.guice.grapher
	testImplementation libs.com.squareup.okhttp3.mockwebserver
	testImplementation libs.org.projectlombok.lombok
	compileOnly libs.org.projectlombok.lombok
	annotationProcessor libs.org.projectlombok.lombok
	compileOnly libs.org.jetbrains.annotations
	compileOnly libs.net.runelite.orange.myextensions

	runtimeOnly(project(":117hd"))
}

// Define the localGitCommit property
def localGitCommit = 'n/a'
try {
	def grgit = org.ajoberstar.grgit.Grgit.open([dir: rootProject.projectDir.absolutePath])
	localGitCommit = grgit.head().id
} catch (Exception e) {
	// Handle the exception if needed
}

project.ext.gitCommit = localGitCommit
apply plugin: BootstrapPlugin

tasks.register("RuneLite.main()", JavaExec.class) {
	classpath = project.sourceSets.main.runtimeClasspath
	workingDir = rootDir
  mainClass = "net.runelite.client.RuneLite"
	jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
}

jar {
 manifest {
  attributes("Main-Class": "net.runelite.client.RuneLite")
 }
}

shadowJar {
	zip64 = true
}

tasks {
	processResources {
		from "$rootDir/lib/runelite-injected.bin"
		dependsOn("generateInjectedData")
	}
}

tasks.register("generateInjectedData", JavaExec.class) {
	classpath = project(":runelite-injector").sourceSets.main.runtimeClasspath
	workingDir = rootDir
  mainClass = "pl.polishcivil.runelite.injector.Injector"
}

tasks.withType(BootstrapTask) {
	group = "bootstrap"
	gitCommit = project.ext.gitCommit
}


import java.net.URI;
import java.net.http.HttpClient;
import java.net.http.HttpRequest;
import java.net.http.HttpResponse;

tasks.register("publishGitlab") {
	doLast {
		var version = "1.10.33-SNAPSHOT";
		var project_id = System.getenv("CI_PROJECT_ID");
		var deploy_token = System.getenv("GITLAB_DEPLOY_TOKEN");
		var ci_env = System.getenv("CI_ENVIRONMENT_NAME");
		var gitlab_host = "https://gitlab.com";
		var file_path = "$rootDir/runelite-client/build/libs/client-$version-all.jar";
		var file_sha = fileSHA(file_path);
		var file_version = "${ci_env}-latest";

		{
			var file_url_path = "client/${file_version}/client.jar";
			var url = String.format("%s/api/v4/projects/%s/packages/generic/%s", gitlab_host, project_id, file_url_path);
			HttpRequest request = HttpRequest.newBuilder()
					.PUT(HttpRequest.BodyPublishers.ofFile(java.nio.file.Path.of(file_path)))
					.uri(URI.create(url))
					.header("DEPLOY-TOKEN", deploy_token)
					.build();
			var response = HttpClient.newHttpClient()
					.send(request, HttpResponse.BodyHandlers.ofString());
			if (response.statusCode() != 201) {
				throw new RuntimeException("Unable to upload file " + response.body());
			}
		}

		{
			var file_url_path = "client/${file_version}/client.sha256";
			var url = String.format("%s/api/v4/projects/%s/packages/generic/%s", gitlab_host, project_id, file_url_path);
			HttpRequest request = HttpRequest.newBuilder()
					.PUT(HttpRequest.BodyPublishers.ofString(file_sha))
					.uri(URI.create(url))
					.header("DEPLOY-TOKEN", deploy_token)
					.build();
			var response = HttpClient.newHttpClient()
					.send(request, HttpResponse.BodyHandlers.ofString());
			if (response.statusCode() != 201) {
				throw new RuntimeException("Unable to upload file " + response.body());
			}
		}

	}
	dependsOn("shadowJar")
}

import java.security.MessageDigest;
import java.io.BufferedInputStream;
import java.io.FileInputStream;
import java.util.Base64;

static String fileSHA(String path) {
	try {
		byte[] buffer = new byte[8192];
		int count;
		MessageDigest digest = MessageDigest.getInstance("SHA-256");
		try (BufferedInputStream bis = new BufferedInputStream(new FileInputStream(path))) {
			while ((count = bis.read(buffer)) > 0) {
				digest.update(buffer, 0, count);
			}
		}

		byte[] hash = digest.digest();
		final StringBuilder hexString = new StringBuilder();
		for (int i = 0; i < hash.length; i++) {
			final String hex = Integer.toHexString(0xff & hash[i]);
			if (hex.length() == 1)
				hexString.append('0');
			hexString.append(hex);
		}
		return hexString.toString();
	} catch (Exception e) {
		return "";
	}
}
